--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "marked": "^12.0.2"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
