--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "marked": "^12.0.2"
+    "marked": "^12.0.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
